backends/tfhe-cuda-backend/cuda/include/programmable_bootstrap.h

enum PBS_TYPE { MULTI_BIT = 0, CLASSICAL = 1 };