backends/tfhe-cuda-backend/src/bindings.rs

extern "C" {
    pub fn cuda_integer_radix_shift_and_rotate_kb_64_inplace(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        lwe_array: *mut ffi::c_void,
        lwe_shift: *const ffi::c_void,
        mem_ptr: *mut i8,
        bsks: *const *mut ffi::c_void,
        ksks: *const *mut ffi::c_void,
        num_blocks: u32,
    );
}
extern "C" {
    pub fn cleanup_cuda_integer_radix_shift_and_rotate(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr_void: *mut *mut i8,
    );
}
extern "C" {
    pub fn scratch_cuda_integer_radix_comparison_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr: *mut *mut i8,
        glwe_dimension: u32,
        polynomial_size: u32,
        big_lwe_dimension: u32,
        small_lwe_dimension: u32,
        ks_level: u32,
        ks_base_log: u32,
        pbs_level: u32,
        pbs_base_log: u32,
        grouping_factor: u32,
        lwe_ciphertext_count: u32,
        message_modulus: u32,
        carry_modulus: u32,
        pbs_type: PBS_TYPE,
        op_type: COMPARISON_TYPE,
        is_signed: bool,
        allocate_gpu_memory: bool,
    );
}
extern "C" {
    pub fn cuda_comparison_integer_radix_ciphertext_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        lwe_array_out: *mut ffi::c_void,
        lwe_array_1: *const ffi::c_void,
        lwe_array_2: *const ffi::c_void,
        mem_ptr: *mut i8,
        bsks: *const *mut ffi::c_void,
        ksks: *const *mut ffi::c_void,
        lwe_ciphertext_count: u32,
    );
}
extern "C" {
    pub fn cuda_scalar_comparison_integer_radix_ciphertext_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        lwe_array_out: *mut ffi::c_void,
        lwe_array_in: *const ffi::c_void,
        scalar_blocks: *const ffi::c_void,
        mem_ptr: *mut i8,
        bsks: *const *mut ffi::c_void,
        ksks: *const *mut ffi::c_void,
        lwe_ciphertext_count: u32,
        num_scalar_blocks: u32,
    );
}
extern "C" {
    pub fn cleanup_cuda_integer_comparison(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr_void: *mut *mut i8,
    );
}
extern "C" {
    pub fn scratch_cuda_integer_radix_bitop_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr: *mut *mut i8,
        glwe_dimension: u32,
        polynomial_size: u32,
        big_lwe_dimension: u32,
        small_lwe_dimension: u32,
        ks_level: u32,
        ks_base_log: u32,
        pbs_level: u32,
        pbs_base_log: u32,
        grouping_factor: u32,
        lwe_ciphertext_count: u32,
        message_modulus: u32,
        carry_modulus: u32,
        pbs_type: PBS_TYPE,
        op_type: BITOP_TYPE,
        allocate_gpu_memory: bool,
    );
}
extern "C" {
    pub fn cuda_bitop_integer_radix_ciphertext_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        lwe_array_out: *mut ffi::c_void,
        lwe_array_1: *const ffi::c_void,
        lwe_array_2: *const ffi::c_void,
        mem_ptr: *mut i8,
        bsks: *const *mut ffi::c_void,
        ksks: *const *mut ffi::c_void,
        lwe_ciphertext_count: u32,
    );
}
extern "C" {
    pub fn cuda_scalar_bitop_integer_radix_ciphertext_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        lwe_array_out: *mut ffi::c_void,
        lwe_array_input: *const ffi::c_void,
        clear_blocks: *const ffi::c_void,
        num_clear_blocks: u32,
        mem_ptr: *mut i8,
        bsks: *const *mut ffi::c_void,
        ksks: *const *mut ffi::c_void,
        lwe_ciphertext_count: u32,
        op: BITOP_TYPE,
    );
}
extern "C" {
    pub fn cleanup_cuda_integer_bitop(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr_void: *mut *mut i8,
    );
}
extern "C" {
    pub fn scratch_cuda_integer_radix_cmux_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr: *mut *mut i8,
        glwe_dimension: u32,
        polynomial_size: u32,
        big_lwe_dimension: u32,
        small_lwe_dimension: u32,
        ks_level: u32,
        ks_base_log: u32,
        pbs_level: u32,
        pbs_base_log: u32,
        grouping_factor: u32,
        lwe_ciphertext_count: u32,
        message_modulus: u32,
        carry_modulus: u32,
        pbs_type: PBS_TYPE,
        allocate_gpu_memory: bool,
    );
}
extern "C" {
    pub fn cuda_cmux_integer_radix_ciphertext_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        lwe_array_out: *mut ffi::c_void,
        lwe_condition: *const ffi::c_void,
        lwe_array_true: *const ffi::c_void,
        lwe_array_false: *const ffi::c_void,
        mem_ptr: *mut i8,
        bsks: *const *mut ffi::c_void,
        ksks: *const *mut ffi::c_void,
        lwe_ciphertext_count: u32,
    );
}
extern "C" {
    pub fn cleanup_cuda_integer_radix_cmux(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr_void: *mut *mut i8,
    );
}
extern "C" {
    pub fn scratch_cuda_integer_radix_scalar_rotate_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr: *mut *mut i8,
        glwe_dimension: u32,
        polynomial_size: u32,
        big_lwe_dimension: u32,
        small_lwe_dimension: u32,
        ks_level: u32,
        ks_base_log: u32,
        pbs_level: u32,
        pbs_base_log: u32,
        grouping_factor: u32,
        num_blocks: u32,
        message_modulus: u32,
        carry_modulus: u32,
        pbs_type: PBS_TYPE,
        shift_type: SHIFT_OR_ROTATE_TYPE,
        allocate_gpu_memory: bool,
    );
}
extern "C" {
    pub fn cuda_integer_radix_scalar_rotate_kb_64_inplace(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        lwe_array: *mut ffi::c_void,
        n: u32,
        mem_ptr: *mut i8,
        bsks: *const *mut ffi::c_void,
        ksks: *const *mut ffi::c_void,
        num_blocks: u32,
    );
}
extern "C" {
    pub fn cleanup_cuda_integer_radix_scalar_rotate(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr_void: *mut *mut i8,
    );
}
extern "C" {
    pub fn scratch_cuda_propagate_single_carry_kb_64_inplace(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr: *mut *mut i8,
        glwe_dimension: u32,
        polynomial_size: u32,
        big_lwe_dimension: u32,
        small_lwe_dimension: u32,
        ks_level: u32,
        ks_base_log: u32,
        pbs_level: u32,
        pbs_base_log: u32,
        grouping_factor: u32,
        num_blocks: u32,
        message_modulus: u32,
        carry_modulus: u32,
        pbs_type: PBS_TYPE,
        allocate_gpu_memory: bool,
    );
}
extern "C" {
    pub fn cuda_propagate_single_carry_kb_64_inplace(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        lwe_array: *mut ffi::c_void,
        carry_out: *mut ffi::c_void,
        mem_ptr: *mut i8,
        bsks: *const *mut ffi::c_void,
        ksks: *const *mut ffi::c_void,
        num_blocks: u32,
    );
}
extern "C" {
    pub fn cuda_propagate_single_carry_get_input_carries_kb_64_inplace(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        lwe_array: *mut ffi::c_void,
        carry_out: *mut ffi::c_void,
        input_carries: *mut ffi::c_void,
        mem_ptr: *mut i8,
        bsks: *const *mut ffi::c_void,
        ksks: *const *mut ffi::c_void,
        num_blocks: u32,
    );
}
extern "C" {
    pub fn cleanup_cuda_propagate_single_carry(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr_void: *mut *mut i8,
    );
}
extern "C" {
    pub fn scratch_cuda_fast_propagate_single_carry_kb_64_inplace(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr: *mut *mut i8,
        glwe_dimension: u32,
        polynomial_size: u32,
        big_lwe_dimension: u32,
        small_lwe_dimension: u32,
        ks_level: u32,
        ks_base_log: u32,
        pbs_level: u32,
        pbs_base_log: u32,
        grouping_factor: u32,
        num_blocks: u32,
        message_modulus: u32,
        carry_modulus: u32,
        pbs_type: PBS_TYPE,
        allocate_gpu_memory: bool,
    );
}
extern "C" {
    pub fn cuda_fast_propagate_single_carry_kb_64_inplace(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        lwe_array: *mut ffi::c_void,
        carry_out: *mut ffi::c_void,
        mem_ptr: *mut i8,
        bsks: *const *mut ffi::c_void,
        ksks: *const *mut ffi::c_void,
        num_blocks: u32,
    );
}
extern "C" {
    pub fn cleanup_cuda_fast_propagate_single_carry(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr_void: *mut *mut i8,
    );
}
extern "C" {
    pub fn scratch_cuda_integer_radix_partial_sum_ciphertexts_vec_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr: *mut *mut i8,
        glwe_dimension: u32,
        polynomial_size: u32,
        lwe_dimension: u32,
        ks_level: u32,
        ks_base_log: u32,
        pbs_level: u32,
        pbs_base_log: u32,
        grouping_factor: u32,
        num_blocks_in_radix: u32,
        max_num_radix_in_vec: u32,
        message_modulus: u32,
        carry_modulus: u32,
        pbs_type: PBS_TYPE,
        allocate_gpu_memory: bool,
    );
}
extern "C" {
    pub fn cuda_integer_radix_partial_sum_ciphertexts_vec_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        radix_lwe_out: *mut ffi::c_void,
        radix_lwe_vec: *mut ffi::c_void,
        num_radix_in_vec: u32,
        mem_ptr: *mut i8,
        bsks: *const *mut ffi::c_void,
        ksks: *const *mut ffi::c_void,
        num_blocks_in_radix: u32,
    );
}
extern "C" {
    pub fn cleanup_cuda_integer_radix_partial_sum_ciphertexts_vec(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr_void: *mut *mut i8,
    );
}
extern "C" {
    pub fn scratch_cuda_integer_radix_overflowing_sub_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr: *mut *mut i8,
        glwe_dimension: u32,
        polynomial_size: u32,
        big_lwe_dimension: u32,
        small_lwe_dimension: u32,
        ks_level: u32,
        ks_base_log: u32,
        pbs_level: u32,
        pbs_base_log: u32,
        grouping_factor: u32,
        num_blocks: u32,
        message_modulus: u32,
        carry_modulus: u32,
        pbs_type: PBS_TYPE,
        allocate_gpu_memory: bool,
    );
}
extern "C" {
    pub fn cuda_integer_radix_overflowing_sub_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        radix_lwe_out: *mut ffi::c_void,
        radix_lwe_overflowed: *mut ffi::c_void,
        radix_lwe_left: *const ffi::c_void,
        radix_lwe_right: *const ffi::c_void,
        mem_ptr: *mut i8,
        bsks: *const *mut ffi::c_void,
        ksks: *const *mut ffi::c_void,
        num_blocks_in_radix: u32,
    );
}
